Fix printf format validation

BUG: 427271